# cheng-skills

./: .gitignore  README.md  claude-code-student-guide.md
.claude/: README.md  settings.json
.claude/hooks/: dreamina-cli-backup.sh  dreamina-cli-restore.sh  lark-cli-backup.sh  lark-cli-restore.sh  session-start.sh
.claude/scripts/: dump-creds.sh
claude-skills-hub/: index.html
dreamina-login/: SKILL.md
dreamina-login/scripts/: auth.py
english-picture-to-video/: SKILL.md
english-to-video/: SKILL.md
wechat-channels-parser/: .env.example  .gitignore  HANDOFF.md  PHASE2_PLAN.md  README.md  pyproject.toml
wechat-channels-parser/_archive/phase1_kf_callback/: PHASE1_VERIFY.md
wechat-channels-parser/_archive/phase1_kf_callback/app/: handlers.py  main.py
wechat-channels-parser/_archive/phase1_kf_callback/tests/: test_crypto.py  test_kf_client.py
wechat-channels-parser/app/: access_token.py  channels_parser.py  config.py  crypto.py  kf_client.py  state.py
wechat-channels-parser/app/msgaudit/: client.py  models.py  worker.py
wechat-channels-parser/app/pipelines/: sphfeed_to_lark.py
wechat-channels-parser/app/utils/: logger.py
wechat-channels-parser/docs/: channels_reverse_eng.md  msgaudit_setup.md  python_sdk_options.md
wechat-channels-parser/tests/: test_handlers.py  test_main.py  test_state.py
wechat-channels-parser/tests/fixtures/: sample_channels_msg.json
wechat-to-lark/: SKILL.md
weixin-to-feishu/: .env.example  SKILL.md
wx-to-feishu/: .env.example  .gitignore  README.md  SKILL.md
xiaosong-to-feishu/: SKILL.md
(+8 files in other folders)
